--- a/package.json
+++ b/package.json
@@ -20,19 +20,23 @@
     "@emotion/react": "^11.7.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
+    "@headlessui/react": "^1.7.14",
     "@material-tailwind/react": "^1.4.2",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.11",
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.3",
     "@popperjs/core": "^2.11.2",
+    "@radix-ui/react-alert-dialog": "^1.0.3",
     "apexcharts-clevision": "3.28.5",
     "axios": "^1.3.4",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^5.2.3",
     "clipboard": "^2.0.11",
     "clsx": "^1.1.1",
+    "date-fns": "^2.29.3",
     "eslint-plugin-react": "^7.29.4",
+    "js-cookie": "^3.0.1",
     "mdi-material-ui": "^7.1.0",
     "next": "^12.3.4",
     "nprogress": "^0.2.0",
